z-index fixed for artists

--- a/styling/artists.css
+++ b/styling/artists.css
@@ -310,7 +310,7 @@ body{
     background-color: #000000c0;
     width: 100%;
     position: absolute;
-    z-index: 999;
+    z-index: 996;
 }
 
 /* nav stylings */
@@ -324,6 +324,9 @@ body{
         width: 100%;
         height: 100%;
         z-index: 996; 
+    }
+    .topbar-artists-open{
+        z-index: 999;
     }
 }
 
@@ -339,5 +342,6 @@ body{
     .sidebar-open {
         width: min-content;
         height: 100%;
+        z-index: 999;
     }
 }
